# Float2024

./: CMakeLists.txt  LICENSE  README.md  html_c_string.txt  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  MS5837.c  MS5837.h  main_float.c  pin_diagrams.c  pin_diagrams.h  sd_card.c  sd_card.h  sd_card_example.c  stepper.c  stepper.h  webserver.c  websever.h
main/web/: index.html
surface/: main.py  requirements.txt
